2008-03-26  Edgard Lima  <edgard.lima@indt.org.br>

	* sys/v4l2/gstv4l2object.c:
	* sys/v4l2/gstv4l2object.h:
	Add device-fd property to make it possible to apps to call ioctl's.

2008-03-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (next_entry_size):
	Unbreak streaming mode again.

2008-03-25  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_set_capture):
	  Remove superfluous DEBUG macro.

2008-03-25  Tim-Philipp Müller  <tim at centricular dot net>

	Based on patch by: William M. Brack <wbrack at mmm com hk>

	* sys/v4l2/v4l2src_calls.c: (fractions_are_equal),
	  (gst_v4l2src_set_capture):
	  Check whether the device supports setting the framerate before
	  trying to set it and then posting a warning or error if it doesn't
	  work (#516649, #520092). Also compare fractions more correctly.

2008-03-23  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/goom/Makefile.am:
	  Remove ppc assembler optimisations from the build until they
	  actually build (they also seem to have GPL headers).

2008-03-23  Tim-Philipp Müller  <tim at centricular dot net>

	* m4/Makefile.am:
	  Better not dist files that don't exist any longer (lrint*m4).

2008-03-21  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* m4/lrint.m4:
	* m4/lrintf.m4:
	Remove lrint/lrintf checks. We don't use it anywhere.

2008-03-18  Andy Wingo  <wingo@pobox.com>

	* sys/osxvideo/osxvideosink.m
	(gst_osx_video_sink_osxwindow_destroy)
	(gst_osx_video_sink_osxwindow_new): Actually set a lock on the
	task, whoopdee.
	(cocoa_event_loop): Pacify the taymans by upping the usleepage to
	2 ms.

2008-03-18  Andy Wingo  <wingo@pobox.com>

	* sys/osxvideo/osxvideosink.m
	(gst_osx_video_sink_osxwindow_destroy)
	(gst_osx_video_sink_osxwindow_new): Actually set a lock on the
	task, whoopdee.
	(cocoa_event_loop): Pacify the taymans by upping the usleepage to
	2 ms.
	
2008-03-17  Tim-Philipp Müller  <tim at centricular dot net>
